# mc-big-brother

./: .env  Cargo.toml  logging.yaml
db/: schema.sql
lua/: clone_swap.lua  config.lua  deployment.lua  install.lua  makebots.lua  nav.lua  open_socket.lua  write.lua  xp.lua
migrations/: 2022-06-01-initial-schema.sql
src/: computer.rs  db.rs  main.rs  response.rs  server.rs
src/db/: computer.rs
src/db/models/: computer.rs  dimension.rs  mod.rs  world.rs
src/server/: mod.rs  run_tcp.rs
