[package]
name = "mc-chunk-locating-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
log = "0.4.17"
log4rs = "1.1.1"
once_cell = "1.12.0"
tokio = { version = "1.17.0", features = ["net", "macros", "sync", "rt-multi-thread", "io-util", "parking_lot", "time"] }
