[package]
name = "mc-chunk-locating-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
log = "0.4"
log4rs = "1.1"
once_cell = "1.12"
tokio = { version = "1.17", features = ["net", "macros", "sync", "rt-multi-thread", "io-util", "parking_lot", "time"] }

sqlx = { version = "0.6", features = ["sqlite", "migrate", "runtime-tokio-rustls"] }
anyhow = "1.0.68"
bytemuck = "1.12.3"
